
2001-04-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSLocale.m: Only call setlocale() in GSSetLocaleC()
	* Source/NSObject.m: ([+initialize]) call GSSetLocaleC() after other
	initialisation, to try to ensure that locale stuff is set up early
	before any attempt is made to use locale dependent code.
	* Source/NSString.m: ([-stringByExpandingTildeInPath:]) fix suggested
	by David Wetzel.
	* Source/GSValue.m: Fix abort when initialising value with illegal type.

2001-04-22  Nicola Pero  <n.pero@mi.flashnet.it>

	* Testing/benchmark.m: Modified messages to give a better idea of
	the order of magnitudes involved; added benchmarks for
	retain/release, autorelease/retain and locking/unlocking.

2001-04-21  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSString.m ([-fileSystemRepresentation]): Cache the
	default file manager.
	
2001-04-21  Richard Frith-Macdonald <rfm@gnu.org>

	* config/config.proccmd.c: New test for behavior of /proc cmdline
	* acconfig.h: New CMDLINE_TERMINATED constant
	* configure.in: Use test to set CMDLINE_TERMINATED
	* configure: regenerated
	* Headers/Foundation/config.h.in: regenerated
	* Source/NSProcessInfo.m : ([+load]) modified to use CMDLINE_TERMINATED
	to decide how to use /proc/$$/cmdline when determining process args.
	Should now work 100% on all linux versions I hope.

2001-04-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m ([NSMutableDataMalloc
	-replaceBytesInRange:withBytes:]): Check length, not capacity!
	Conform to documentation, and avoid possibility of 'hole' in data.
	* Source/NSInvocation.m: _get_arg() indirection fix suggested by
	Michael Scheibler.

2001-04-20  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSFileManager.m (NSDirectoryEnumerator): Rewritten to be
	faster.  ([NSFileManager -directoryContentsAtPath:]),
	([NSFileManager -subpathsAtPath:]): Use the new init method for
	NSDirectoryEnumerator.  ([NSFileManager
	-contentsEqualAtPath:andPath:]): Spare some method calls.